AdGuard Home update v0.107.0-b.8

--- a/AdGuardHome/Makefile
+++ b/AdGuardHome/Makefile
@@ -7,13 +7,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=AdGuardHome
-PKG_VERSION:=0.106.3
+PKG_VERSION:=0.107.0-b.8
 PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_VERSION:=v$(PKG_VERSION)
 PKG_SOURCE_URL:=https://github.com/AdguardTeam/AdGuardHome
-PKG_MIRROR_HASH:=48b076e1d74f69b341240e3c90839ce737faed3b58d5a5fe2be7c2677840c2a2
+PKG_MIRROR_HASH:=9d2937f9cc25c3233e0361eaab5be5c497e485de305412c994002aa7dc8e7781
 
 PKG_LICENSE:=GPL-3.0-only
 PKG_LICENSE_FILES:=LICENSE.txt
