--- a/luci-theme-ifit/Makefile
+++ b/luci-theme-ifit/Makefile
@@ -6,12 +6,13 @@
 
 include $(TOPDIR)/rules.mk
 
-THEME_NAME:=ifit
-THEME_TITLE:=ifit
+THEME_NAME:=infinityfreedom
+THEME_TITLE:=infinityfreedom
 
 PKG_NAME:=luci-theme-$(THEME_NAME)
-PKG_VERSION:=20200706
-PKG_RELEASE:=0
+PKG_VERSION:=1.5.20210222
+
+PKG_RELEASE:=1
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -21,7 +22,7 @@ define Package/luci-theme-$(THEME_NAME)
   SUBMENU:=4. Themes
   DEPENDS:=+libc
   TITLE:=Infinity Freedom Theme
-  URL:=https://github.com/kenzok8/luci-theme-ifit
+  URL:=https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom
   PKGARCH:=all
 endef
 
