--- a/luci-theme-ifit/Makefile
+++ b/luci-theme-ifit/Makefile
@@ -1,4 +1,4 @@
-# LuCI Theme Infinity Freedom
+# LuCI Theme ifit
 # Copyright 2020 Richard Yu <xiaoqingfengatgm@gmail.com>
 #
 # Licensed under the Apache License v2.0
@@ -6,8 +6,8 @@
 
 include $(TOPDIR)/rules.mk
 
-THEME_NAME:=infinityfreedom
-THEME_TITLE:=infinityfreedom
+THEME_NAME:=ifit
+THEME_TITLE:=ifit
 
 PKG_NAME:=luci-theme-$(THEME_NAME)
 PKG_VERSION:=1.5.20210222
@@ -21,8 +21,8 @@ define Package/luci-theme-$(THEME_NAME)
   CATEGORY:=LuCI
   SUBMENU:=4. Themes
   DEPENDS:=+libc
-  TITLE:=Infinity Freedom Theme
-  URL:=https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom
+  TITLE:=Infit by kenzo
+  URL:=https://github.com/kenzok8/luci-theme-ifit
   PKGARCH:=all
 endef
 
